@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle

interface Comparable<Appointment> {
    +compareTo(other: Appointment): int
}

interface OutputConversion {
    +convertPatientToOutputText(): String
}

class Appointment {
    -patientName: String
    -patientNric: String
    -time: LocalTime
    -date: LocalDate
    -consultationDuration: long = 30
    -formatter: DateTimeFormatter = "dd-MM-yyyy"
    +Appointment(patientName: String, patientNric: String, date: String, time: String)
    +getPatientName(): String
    +getPatientNric(): String
    +getDate(): LocalDate
    +getTime(): LocalTime
    +getConsultationDuration(): long
    +toString(): String
    +compareTo(other: Appointment): int
    +convertPatientToOutputText(): String
}

class AppointmentRecord {
}

class CommandHandler {
}

class FileHandler {
}

Comparable <|.. Appointment
OutputConversion <|.. Appointment

AppointmentRecord "1" o-- "many" Appointment
CommandHandler --> Appointment : creates and modifies >
FileHandler --> Appointment : reads and writes >

@enduml